fix text overflow

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -328,8 +328,9 @@ input:focus {
 
 /* MESSAGE */
 .message {
-  max-width: 55%;
-  width: fit-content;
+  max-width: 20rem;
+  inline-size: fit-content;
+  overflow-wrap: break-word;
   background-color: var(--bg-color-5);
   border-radius: 0.25rem;
   font-size: 0.9rem;
